# cookiecutter-python-template

./: README.md  cookiecutter.json
.github/workflows/: main.yml
{{cookiecutter.project_slug}}/: Dockerfile  makefile  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: main.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: config.py  logger.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: test_app.py
