[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_name}}"
authors = ["VaultVulp <me@vaultvulp.dev>"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
loguru = "^0.5.3"
click = "^7.1.2"
dynaconf = {version = "^3.1.2", extras = ["vault"]}

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
flake8 = "^3.8.4"
isort = "^5.6.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
pytest-env = "^0.6.2"
pytest-deadfixtures = "^2.2.1"
pytest-html = "^2.1.1"
pytest-mock = "^3.3.1"
pytest-randomly = "^3.4.1"
pytest-sugar = "^0.9.4"
freezegun = "^1.0.0"
yapf = "^0.30.0"
{%- if cookiecutter.upload_badge_to_minio_host == 'y' %}
s3cmd = "^2.1.0"
coverage-badge = "^1.0.1"
{%- endif %}

[tool.poetry.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.app:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
